--- a/strona2.html
+++ b/strona2.html
@@ -3,8 +3,8 @@
           <meta charset="UTF-8">
       </head>
  <body>
-   <h1> <p>Parametry techniczne:</p></h1>
-	<table border="5" bordercolor="blue" style="height: 300px;" width="400">
+  	<center><h1><span style="color: #0000ff;">Parametry techniczne:</span> </h1></center>
+	<table align="center" border="5" bordercolor="blue" style="height: 400px;" width="500">
 	<tbody>
 	<tr>
 	<td style="width: 147px;">Zasilanie:</td>
