--- a/strona3.html
+++ b/strona3.html
@@ -18,7 +18,7 @@
 </div>
 <p class="p-spacing-bottom-a">*Polaczenia z tel. komorkowych zgodnie z taryfa operatora</p>
 <p class="p-spacing-bottom-a">Z wyjatkiem swiat i dni wolnych od pracy </p>
-<p><a class="p-button p-large p-xs-s-full p-link-more" href="tel://223971506"> Zadzwo¿ do nas </a></p>
+<p><a class="p-button p-large p-xs-s-full p-link-more" href="tel://223971506"> Zadzwon do nas </a></p>
 <p>&nbsp;</p>
 <h3 class="p-block-title p-heading-03 p-heading-bold">Napisz do nas</h3>
 <p><a class="p-button p-large p-xs-s-full p-link-more" href="https://www.philips.pl/c-w/support-home/support-contact-form.html?HOUSEHOLD_PRODUCTS_GR" target="_blank" rel="noopener"> Wyslij wiadomosc </a></p>
