header of the 1 page added

--- a/strona1.html
+++ b/strona1.html
@@ -1,4 +1,7 @@
 <html>
+ <head>
+<title>T-1000-(4Melmak)</title>
+ </head>
  <body>
 	<center><h1><span class="pv_title" style="color: #0000ff;"><span class="pv_title_name"><span style="text-decoration: underline;"><strong>Odkurzacz PHILIPS FC6409 PowerPro Aqua</strong></span> zrobi to za Ciebie!</span></span></h1></center>
 
