header 1 page added

--- a/strona2.html
+++ b/strona2.html
@@ -1,6 +1,7 @@
 <html>
       <head>
-          <meta charset="UTF-8">
+	<title>T-1000-(4Melmak)j</title>      
+	 <meta charset="UTF-8">
       </head>
  <body>
   	<center><h1><span style="color: #0000ff;">Parametry techniczne:</span> </h1></center>
