typo mistake 2 page

--- a/strona2.html
+++ b/strona2.html
@@ -1,6 +1,6 @@
 <html>
       <head>
-	<title>T-1000-(4Melmak)j</title>      
+	<title>T-1000-(4Melmak)</title>      
 	 <meta charset="UTF-8">
       </head>
  <body>
