header of the 3 page added

--- a/strona3.html
+++ b/strona3.html
@@ -1,6 +1,7 @@
 <html>
  <head>
 	<meta charset="UTF-8">
+	<title>T-1000-(4Melmak)</title>
  </head>
 <body>
 <h2 class="p-n62-detail-title p-heading-02 p-heading-bold"><span style="color: #0000ff;">Informacje kontaktowe:</span></h2>
