second page colors edited

--- a/strona2.html
+++ b/strona2.html
@@ -3,9 +3,10 @@
 	<title>T-1000-(4Melmak)</title>      
 	 <meta charset="UTF-8">
       </head>
- <body>
-  	<center><h1><span style="color: #0000ff;">Parametry techniczne:</span> </h1></center>
-	<table align="center" border="5" bordercolor="blue" style="height: 400px;" width="500">
+ <body bgcolor="#eaedf1">
+
+  	<center><h1><span style="color: #eaedf1">Parametry techniczne:</span> </h1></center>
+	<table align="center" border="5" bordercolor="#e04b27" style="height: 400px;" width="500">
 	<tbody>
 	<tr>
 	<td style="width: 147px;">Zasilanie:</td>
