--- a/strona2.html
+++ b/strona2.html
@@ -2,6 +2,7 @@
       <head>
 	<title>T-1000-(4Melmak)</title>      
 	 <meta charset="UTF-8">
+	<link rel="Shortcut icon" href="http://pp5.dydaktyka.jkan.pl/_images/acme.png" />
       </head>
  <body bgcolor="#eaedf1">
 
