picture 3 page added

--- a/strona3.html
+++ b/strona3.html
@@ -1,6 +1,7 @@
 <html>
  <head>
 	<meta charset="UTF-8">
+	<link rel="Shortcut icon" href="http://pp5.dydaktyka.jkan.pl/_images/acme.png" />
 	<title>T-1000-(4Melmak)</title>
  </head>
 <body>
