--- a/strona3.html
+++ b/strona3.html
@@ -4,8 +4,9 @@
 	<link rel="Shortcut icon" href="http://pp5.dydaktyka.jkan.pl/_images/acme.png" />
 	<title>T-1000-(4Melmak)</title>
  </head>
-<body>
-<h2 class="p-n62-detail-title p-heading-02 p-heading-bold"><span style="color: #0000ff;">Informacje kontaktowe:</span></h2>
+<body bgcolor="#eaedf1">
+<h2 class="p-n62-detail-title p-heading-02 p-heading-bold"><span style="color: #002a54">Informacje kontaktowe:</span></h2>
+
 <p>&nbsp;</p>
 <h3 class="p-block-title p-heading-03 p-heading-bold">Porozmawiaj z nami</h3>
 <div class="p-timetable p-spacing-bottom-a">
