page 2 one color edited

--- a/strona2.html
+++ b/strona2.html
@@ -6,7 +6,7 @@
       </head>
  <body bgcolor="#eaedf1">
 
-  	<center><h1><span style="color: #eaedf1">Parametry techniczne:</span> </h1></center>
+  	<center><h1><span style="color: #002a54">Parametry techniczne:</span> </h1></center>
 	<table align="center" border="5" bordercolor="#e04b27" style="height: 400px;" width="500">
 	<tbody>
 	<tr>
