page 1 video edited

--- a/strona1.html
+++ b/strona1.html
@@ -5,8 +5,9 @@
  </head>
  <body bgcolor="#eaedf1">
 	<center><h1><span class="pv_title" style="color: #002a54;"><span class="pv_title_name"><span style="text-decoration: underline;"><strong>Odkurzacz PHILIPS FC6409 PowerPro Aqua</strong></span> zrobi to za Ciebie!</span></span></h1></center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/qZxRBbK69YU" frameborder="0" allowfullscreen></iframe>
-	<center><p><img src="https://stat-s4.ms-online.pl/media/cache/gallery/rc/ap2k50nx/images/20/20240234/philips-fc6409-01-4.jpg" width="600" height="500" /></p></center>
+<br>
+<br>
+<center><iframe width="660" height="415" src="https://www.youtube.com/embed/qZxRBbK69YU" frameborder="0" allowfullscreen></iframe></center>
  </body>
 </html>
 
